# discord-nowplaying-integration

./: .gitignore  .sublimelinterrc  LICENSE.txt  README.md  README.rst  frozen-requirements.txt  main.py  requirements.txt  setup.cfg
src/discord_nowplaying_integration/: __init__.py  __main__.py
src/discord_nowplaying_integration/integration/: __init__.py
src/discord_nowplaying_integration/nowplaying/: __init__.py
src/discord_nowplaying_integration/nowplaying/observers/: __init__.py  com.py  dbus_mpris.py  dnc_ps.py  spotify_web_helper.py
src/discord_nowplaying_integration/selfbot/: __init__.py
src/discord_nowplaying_integration/utils/: __init__.py
