[metadata]
name = discord-nowplaying-integration
version = 0.1.0.dev0
description = A Discord selfbot that sets the user's currently playing track as their status message
long_description = file: README.rst
author = Xiao Di Guan
author_email = xdg@puxlit.net
url = https://github.com/puxlit/discord-nowplaying-integration
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.6
    Topic :: Communications :: Chat
    Topic :: Internet
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Utilities
license = MIT
keywords =
    discord
    now playing
    selfbot
platforms =
    MacOS X

[options]
setup_requires =
    pip >= 6.0
    setuptools >= 30.3
install_requires =
    discord.py ~= 0.16.0
    psutil ~= 5.0
    pyobjc-core ~= 3.1
    pyobjc-framework-Cocoa ~= 3.1
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    discord-nowplaying-integration = discord_nowplaying_integration:main

[options.packages.find]
where = src
